--- a/src/BlazingPizza.OrderService/BlazingPizza.OrderService.csproj
+++ b/src/BlazingPizza.OrderService/BlazingPizza.OrderService.csproj
@@ -16,6 +16,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="StackExchange.Redis" Version="2.0.601" />
   </ItemGroup>
 
 </Project>
