--- a/src/BlazingPizza.DeliveryService/BlazingPizza.DeliveryService.csproj
+++ b/src/BlazingPizza.DeliveryService/BlazingPizza.DeliveryService.csproj
@@ -15,7 +15,12 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="OpenTelemetry.Collector.AspNetCore" Version="0.2.0-alpha.100" />
+    <PackageReference Include="OpenTelemetry.Hosting" Version="0.2.0-alpha.100" />
+    <PackageReference Include="OpenTelemetry.Exporter.Zipkin" Version="0.2.0-alpha.100" />
+    <PackageReference Include="OpenTelemetry.Collector.StackExchangeRedis" Version="0.2.0-alpha.100" />
     <PackageReference Include="StackExchange.Redis" Version="2.0.601" />
+    <PackageReference Include="prometheus-net.AspNetCore" Version="3.4.0" />
   </ItemGroup>
 
 </Project>
