--- a/src/BlazingPizza.OrderService/BlazingPizza.OrderService.csproj
+++ b/src/BlazingPizza.OrderService/BlazingPizza.OrderService.csproj
@@ -10,6 +10,10 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="$(EntityFrameworkVersion)" />
+    <PackageReference Include="OpenTelemetry.Collector.AspNetCore" Version="0.2.0-alpha.100" />
+    <PackageReference Include="OpenTelemetry.Hosting" Version="0.2.0-alpha.100" />
+    <PackageReference Include="OpenTelemetry.Exporter.Zipkin" Version="0.2.0-alpha.100" />
+    <PackageReference Include="OpenTelemetry.Collector.StackExchangeRedis" Version="0.2.0-alpha.100" />
     <PackageReference Include="Google.Api.CommonProtos" Version="1.7.0" />
     <PackageReference Include="Grpc.AspNetCore" Version="2.26.0" />
     <PackageReference Include="Grpc.Tools" Version="2.26.0">
@@ -17,6 +21,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="StackExchange.Redis" Version="2.0.601" />
+    <PackageReference Include="prometheus-net.AspNetCore" Version="3.4.0" />
   </ItemGroup>
 
 </Project>
