--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,7 +1,13 @@
 <Project>
-    <PropertyGroup>
-        <AspNetCoreVersion>3.1.0</AspNetCoreVersion>
-        <BlazorVersion>3.1.0-preview4.19579.2</BlazorVersion>
-        <EntityFrameworkVersion>3.1.0</EntityFrameworkVersion>
-    </PropertyGroup>
+  <PropertyGroup>
+    <AspNetCoreVersion>3.1.0</AspNetCoreVersion>
+    <BlazorVersion>3.1.0-preview4.19579.2</BlazorVersion>
+    <EntityFrameworkVersion>3.1.0</EntityFrameworkVersion>
+  </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Nerdbank.GitVersioning">
+      <Version>3.1.71</Version>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
 </Project>
