switch to sql server, currently using a single sql container but database per service.

--- a/src/BlazingPizza.MenuService/appsettings.json
+++ b/src/BlazingPizza.MenuService/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "MenuDatabase":"Server=sql;Database=menu;User Id=sa;Password=yourStrong(!)Password;"
+  },
   "AllowedHosts": "*"
 }
