--- a/src/BlazingPizza.OrderService/appsettings.json
+++ b/src/BlazingPizza.OrderService/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "OrdersDatabase":"Server=sql;Database=orders;User Id=sa;Password=yourStrong(!)Password;"
+  },
   "AllowedHosts": "*"
 }
