--- a/src/BlazingPizza.Server/appsettings.json
+++ b/src/BlazingPizza.Server/appsettings.json
@@ -3,5 +3,8 @@
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "PizzaDatabase":"Server=sql;Database=pizza;User Id=sa;Password=yourStrong(!)Password;"
   }
 }
