--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -67,5 +67,12 @@ services:
     image: openzipkin/zipkin
     ports:
     - "9411:9411"
+  sql:
+    image: mcr.microsoft.com/mssql/server:2019-latest
+    environment:
+      SA_PASSWORD: "yourStrong(!)Password"
+      ACCEPT_EULA: "Y"
+    ports:
+      - "1433"
 volumes:
   data-volume:
