--- a/docker/Dockerfile.orders
+++ b/docker/Dockerfile.orders
@@ -16,5 +16,6 @@ RUN dotnet publish ./src/BlazingPizza.OrderService -c Release -o out
 # Build runtime image
 FROM mcr.microsoft.com/dotnet/core/aspnet:3.1
 WORKDIR /app
+COPY ./wait-for-it.sh .
 COPY --from=build-env /app/out .
 ENTRYPOINT ["dotnet", "BlazingPizza.OrderService.dll"]
