--- a/docker/Dockerfile.server
+++ b/docker/Dockerfile.server
@@ -24,5 +24,6 @@ RUN dotnet publish ./src/BlazingPizza.Server -c Release -o out
 # Build runtime image
 FROM mcr.microsoft.com/dotnet/core/aspnet:3.1
 WORKDIR /app
+COPY ./wait-for-it.sh .
 COPY --from=build-env /app/out .
 ENTRYPOINT ["dotnet", "BlazingPizza.Server.dll"]
