--- a/src/BlazingPizza.MenuService/appsettings.json
+++ b/src/BlazingPizza.MenuService/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "MenuDatabase":"Server=sql;Database=menu;User Id=sa;Password=yourStrong(!)Password;"
+    "MenuDatabase":""
   },
   "AllowedHosts": "*"
 }
