--- a/src/BlazingPizza.OrderService/appsettings.json
+++ b/src/BlazingPizza.OrderService/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "OrdersDatabase":"Server=sql;Database=orders;User Id=sa;Password=yourStrong(!)Password;"
+    "OrdersDatabase":""
   },
   "AllowedHosts": "*"
 }
