--- a/src/BlazingPizza.Server/appsettings.json
+++ b/src/BlazingPizza.Server/appsettings.json
@@ -5,6 +5,6 @@
     }
   },
   "ConnectionStrings": {
-    "PizzaDatabase":"Server=sql;Database=pizza;User Id=sa;Password=yourStrong(!)Password;"
+    "PizzaDatabase":""
   }
 }
